User profile picture display issue : account,homepage,review,comment - done

--- a/views/pages/individualHouse.handlebars
+++ b/views/pages/individualHouse.handlebars
@@ -101,7 +101,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="reviewPic">
-                    <img src="/public/image/{{this.profileImg}}" alt="user">
+                    <img src="{{this.profileImg}}" alt="user">
                 </div>
                 <h3 class="panel-title reviewUser">
                     <a href="http://localhost:3000/account/{{this.reviewData.userId}}">{{this.username}}</a>
@@ -116,7 +116,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="commentPic">
-                                <img src="/public/image/{{this.profilePicture}}" alt="user">
+                                <img src="{{this.profilePicture}}" alt="user">
                             </div>
                             <h4 class="panel-title commentUser">
 
