--- a/views/pages/userHomePage.handlebars
+++ b/views/pages/userHomePage.handlebars
@@ -4,7 +4,7 @@
 			{{user.firstName}}{{user.lastName}}'s Home Page:
 		</h3>
 		<div class="profilePic">
-			<img src="/public/image/{{user.profilePicture}}" alt="user" style="cursor:default;">
+			<img src="{{user.profilePicture}}" alt="user" style="cursor:default;">
 		</div>
 	</div>
 	<div class="panel-body">
