--- a/views/pages/account.handlebars
+++ b/views/pages/account.handlebars
@@ -4,7 +4,7 @@
 			Account:
 		</h3>
 		<div class="profilePic">
-			<img src="/public/image/{{user.profilePicture}}" onclick="imageOnClick()" alt="user">
+			<img src="{{user.profilePicture}}" onclick="imageOnClick()" alt="user">
 		</div>
 		<label for="profilepicture" style="font-size:1px; color: grey;">Click on change Avatar</label>
 		<input type="file" style="display:none" id="updatepicture" name="updatepicture" onchange="updateimage()"
