Error msg added for search and manage house

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,3 +132,10 @@
   background-color: white;
   color: #000;
 }
+
+.emptySearchList {
+  color: red;
+  font-size: medium;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: bolder;
+}
