Handle latitude and longitude

--- a/views/pages/houseManage.handlebars
+++ b/views/pages/houseManage.handlebars
@@ -41,8 +41,10 @@
                 <div id="stateError" style="display: none;">You must enter a state</div>
                 <div id="pincodeError" style="display: none;">You must enter a pincode</div>
 
-                <div id="latitudeError" style="display: none;">You must enter a latitude for map location</div>
-                <div id="longitudeError" style="display: none;">You must enter a longitude for map location</div>
+                <div id="latitudeError" style="display: none;">You must enter a latitude(between -90 to 90) for map
+                    location</div>
+                <div id="longitudeError" style="display: none;">You must enter a longitude(between -180 to 180) for map
+                    location</div>
 
                 <div id="rentError" style="display: none;">You must enter a House rent</div>
 
