--- a/views/pages/logout.handlebars
+++ b/views/pages/logout.handlebars
@@ -1,7 +1,9 @@
 
-<div class="row justify-content-center">
+<div class="row justify-content-center" style="margin-left:10px;">
     <h1>Log out</h1>
 </div>
-<div class="row justify-content-center">
+<div class="row justify-content-center" style="margin-left:20px;">
     <p>You've been logged out successfully!</p>
+    <p class="mb-0"> <a href="http://localhost:3000/login" class="alert-link"
+aria-label="Click to go to the home page">Click here</a> to go to the login page.</p>
 </div>
