Solved html error

--- a/views/pages/houseManage.handlebars
+++ b/views/pages/houseManage.handlebars
@@ -90,7 +90,7 @@
 <br>
 <br>
 <form id="regForm" action="add" method="post">
-    <div id="house" title="{{houseDetail}}" hidden=true></div>
+    <div id="house" title="{{houseDetail}}" style="display: none"></div>
 
     <div class="form-row">
         <h3> House Images</h3>
@@ -213,7 +213,7 @@
     <div>
         <h3> Other informations</h3>
         <div>
-            <label for="petFriendly">Is house Pet Friendly? : </label>
+            <label>Is house Pet Friendly? : </label>
             <input type="radio" id="petFriendlyYes" name="petFriendly" value="YES">
             <label for="petFriendlyYes">YES</label>
             <input type="radio" id="petFriendlyNo" name="petFriendly" value="NO">
@@ -221,7 +221,7 @@
         </div>
 
         <div>
-            <label for="parkingAvailable">Is Parking Available? : </label>
+            <label>Is Parking Available? : </label>
             <input type="radio" id="parkingAvailableYes" name="parkingAvailable" value="YES">
             <label for="parkingAvailableYes">YES</label>
             <input type="radio" id="parkingAvailableNo" name="parkingAvailable" value="NO">
