--- a/views/pages/mainPage.handlebars
+++ b/views/pages/mainPage.handlebars
@@ -35,9 +35,9 @@
 
             <div id="date" class="form-horizontal col-md-3 form-group">
                 <label for="date-start" class="control-label"> Start Date </label>
-                <input type="date" name="date-start" id="date-start" placeholder="MM/DD/YYYY" class="form-control">
+                <input type="date" name="date-start" id="date-start" class="form-control">
                 <label for="date-end" class="control-label"> End Date </label>
-                <input type="date" name="date-end" id="date-end" placeholder="MM/DD/YYYY" class="form-control">
+                <input type="date" name="date-end" id="date-end" class="form-control">
             </div>
 
             <div id="address">
@@ -107,10 +107,12 @@
 
             </div>
             <div>
-                <p class="paraClass" id="address"> {{houseNumber}} {{street}} <br> {{city}}, {{state}}, {{pincode}} </p>
+                <p class="paraClass"> {{houseNumber}} {{street}} <br> {{city}}, {{state}},
+                    {{pincode}}
+                </p>
             </div>
             <div>
-                <p class="paraClass" id="priceInfo">
+                <p class="paraClass">
                     Rent: ${{rent}}/mo <br>
                     {{houseType.type}} | {{houseType.bedroom}} Bedroom(s)
                 </p>
@@ -132,10 +134,11 @@
 
             </div>
             <div>
-                <p class="paraClass" id="address"> {{houseNumber}} {{street}} <br> {{city}}, {{state}}, {{pincode}} </p>
+                <p class="paraClass"> {{houseNumber}} {{street}} <br> {{city}}, {{state}},
+                    {{pincode}} </p>
             </div>
             <div>
-                <p class="paraClass" id="priceInfo">
+                <p class="paraClass">
                     Rent: ${{rent}}/mo <br>
                     {{houseType.type}} | {{houseType.bedroom}} Bedroom(s)
                 </p>
