Some HTML statement errors have been fixed

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
                     <a class="navbar-brand" href="http://localhost:3000/">House Finder</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li class="dropdown" class="active">
+                    <li class="dropdown active">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="">User <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/account">Manage</a></li>
