--- a/views/pages/account.handlebars
+++ b/views/pages/account.handlebars
@@ -6,7 +6,7 @@
 		<div class="profilePic">
 			<img src="{{user.profilePicture}}" onclick="imageOnClick()" alt="user">
 		</div>
-		<label for="profilepicture" style="font-size:10px; color: grey;">Click on change Avatar</label>
+		<label for="updatepicture" style="font-size:10px; color: grey;">Click on change Avatar</label>
 		<input type="file" style="display:none" id="updatepicture" name="updatepicture" onchange="updateimage()"
 			accept=".jpg, .jpeg, .png">
 	</div>
@@ -147,5 +147,5 @@
 </div>
 
 
-<script type="text/javascript" src="/public/js/profilePicture.js"></script>
-<script type="text/javascript" src="/public/js/account.js"></script>
+<script src="/public/js/profilePicture.js"></script>
+<script	src="/public/js/account.js"></script>
