--- a/views/pages/update.handlebars
+++ b/views/pages/update.handlebars
@@ -128,6 +128,7 @@
 						</div>
 						<div class="text-center">
 							<button id="updateButton" type="submit" class="btn btn-primary" style="width: 200px;">Update</button>
+                        </div>
 					</form>
 				</div>
 			</div>
