--- a/views/pages/registration.handlebars
+++ b/views/pages/registration.handlebars
@@ -88,7 +88,7 @@
                         <input type="text" maxlength="50" name="street" class="form-control" id="street" placeholder="street">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="profilepicture">profilepicture</label>
+                        <label for="profilepicturefile">profilepicture</label>
                         <input type="file" id="profilepicturefile" name="profilepicturefile" onchange="readimage()" accept=".jpg, .jpeg, .png">
                         <div id="showpicture">
                             <p>No files currently selected for upload</p>
@@ -136,5 +136,3 @@
 </div>
 <br>
 <br>
-
- <script type="text/javascript" src="/public/js/registerForm.js"></script>
