change menu bar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,26 +32,25 @@
             </div>
             <ul class="nav navbar-nav">
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="">User <span class="caret"></span></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="/account">User <span
+                            class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/account">Manage</a></li>
+                        <li><a href="/account">User Personal Information</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="">Home <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/house/add">Add</a></li>
-                        <li><a href="/house">Search</a></li>
-                        <li><a href="/house/updateHouse">Manage</a></li>
-
-
+                        <li><a href="/house/add">Add House</a></li>
+                        <li><a href="/house">Search House(s)</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="">System Management <span
                             class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/account">Account</a></li>
+                        <li><a href="/account">User Account Manage</a></li>
+                        <li><a href="/house/updateHouse">House(s) Manage</a></li>
                     </ul>
 
                 </li>
