--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-
 .fav {
   background-color: green;
   color: aliceblue;
@@ -23,15 +22,15 @@
   font-style: initial;
 }
 
-#commentButton {
+/* #commentButton {
   color: cadetblue;
   background-color: black;
   font-size: medium;
   font-family: "Times New Roman", Times, serif;
   font-weight: bolder;
-}
+} */
 
-#commentDoneButton {
+.commentDone {
   color: whitesmoke;
   background-color: green;
   font-size: medium;
@@ -39,7 +38,102 @@
   font-weight: bolder;
 }
 
-#error {
+.error {
+  color: red;
+  font-size: medium;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: bolder;
+}
+
+.profilePic {
+  position: relative;
+  margin-top: 10px;
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+  background: grey;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #000;
+  text-align: center;
+  overflow: hidden;
+}
+.profilePic img {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.reviewPic {
+  position: relative;
+  left: 0px;
+  top: 0px;
+  margin-top: 0px;
+  margin-left: 0px;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  background: grey;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #000;
+  text-align: center;
+  overflow: hidden;
+}
+.reviewUser {
+  float: left;
+  position: relative;
+  margin-top: -23px;
+  left: 40px;
+  top: 0px;
+}
+.reviewPic img {
+  width: 100%;
+  height: 100%;
+}
+
+.commentPic {
+  position: relative;
+  left: 0px;
+  top: 0px;
+  margin-top: 0px;
+  margin-left: 0px;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  background: grey;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #000;
+  text-align: center;
+  overflow: hidden;
+}
+.commentUser {
+  float: left;
+  position: relative;
+  margin-top: -23px;
+  left: 35px;
+  top: 0px;
+}
+.commentPic img {
+  width: 100%;
+  height: 100%;
+}
+
+#deleteButton {
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+#houseType {
+  background-color: white;
+  color: #000;
+}
+
+.emptySearchList {
   color: red;
   font-size: medium;
   font-family: "Times New Roman", Times, serif;
