Finish the error page

--- a/views/pages/error.handlebars
+++ b/views/pages/error.handlebars
@@ -1,3 +1,6 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<div class="row justify-content-center">
+    <div class="alert alert-danger" role="alert">
+    <div class="alert-heading errorHeading">Error</div>
+    <p>
+    {{error}}
+</p>
