--- a/views/pages/update.handlebars
+++ b/views/pages/update.handlebars
@@ -88,7 +88,7 @@
 							<div class="form-group col-md-6">
 								<label for="password">Password</label>
 								<input type="password" maxlength="50" name="password" class="form-control" id="password"
-									placeholder="new password"> 
+									placeholder="Enter your current password or the password you want to change"> 
 							</div>
 						</div>
 
