--- a/views/pages/erroraccess.handlebars
+++ b/views/pages/erroraccess.handlebars
@@ -5,6 +5,6 @@
     The page you are trying to access does not exist.
 </p>
 <p class="mb-0"> <a href="http://localhost:3000/login" class="alert-link"
-aria-label="Click to go to the home page">Click here</a> to go to the home page.</p>
+aria-label="Click to go to the home page">Click here</a> to go to the login page.</p>
 </div>
 </div>
