--- a/views/pages/individualHouse.handlebars
+++ b/views/pages/individualHouse.handlebars
@@ -1,5 +1,5 @@
 <div class="individualHousePage">
-    <h1 id="title"> It's an individual house</h1>
+    <h1 id="title"> House Details </h1>
 
     <!-- 
         Order of content on page:
