Error fix add house

--- a/views/pages/houseManage.handlebars
+++ b/views/pages/houseManage.handlebars
@@ -35,10 +35,11 @@
             <div id="displayError" class="alert alert-danger text-left" role="alert" style="display: none;">
 
                 <div id="pictureError" style="display: none;">Upload atleast 1 house picture</div>
-                <div id="streetError" style="display: none;">You must enter a street</div>
-                <div id="housenumberError" style="display: none;">You must enter a house number</div>
-                <div id="cityError" style="display: none;">You must enter a city</div>
-                <div id="stateError" style="display: none;">You must enter a state</div>
+                <div id="streetError" style="display: none;">You must enter a street (No special character allow)</div>
+                <div id="housenumberError" style="display: none;">You must enter a house number (No special character
+                    allow)</div>
+                <div id="cityError" style="display: none;">You must enter a city (No special character allow)</div>
+                <div id="stateError" style="display: none;">You must enter a state (No special character allow)</div>
                 <div id="pincodeError" style="display: none;">You must enter a pincode</div>
 
                 <div id="latitudeError" style="display: none;">You must enter a latitude(between -90 to 90) for map
